--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "husky": "^2.7.0",
+    "prettier": "1.18.2",
     "typescript": "^3.5.2"
   },
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:js": "babel src -d lib -x \".ts\" --ignore \"**/*.test.ts\"",
     "build:types": "tsc --emitDeclarationOnly",
+    "format": "eslint src --ext .ts",
+    "prebuild": "npm run format",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "husky": {
