--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "description": "react component to navigate through pre-configured pages",
   "main": "lib/workflow.js",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.8.6"
+  },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/react": "^16.8.22",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
-    "eslint": "^6.0.1",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^2.7.0",
@@ -20,7 +23,7 @@
   },
   "scripts": {
     "build": "npm run build:js && npm run build:types",
-    "build:js": "babel src -d lib -x \".ts\" --ignore \"**/*.test.ts\"",
+    "build:js": "babel src -d lib -x \".ts,.tsx\" --ignore \"**/*.test.ts\"",
     "build:types": "tsc --emitDeclarationOnly",
     "format": "eslint src --ext .ts",
     "prebuild": "npm run format",
