--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
     "declaration": true,
+    "esModuleInterop": true,
+    "jsx": "preserve",
+    "moduleResolution": "node",
     "outDir": "lib",
     "strict": true,
+    "target": "esnext"
   },
   "exclude": [
     "node_modules",
     "**/*.test.*"
   ],
   "include": [
-    "src/**/*"
+    "src"
   ]
 }
