--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "npm run build:js && npm run build:types",
     "build:js": "babel src -d lib -x \".ts,.tsx\" --ignore \"**/*.test.ts\"",
     "build:types": "tsc --emitDeclarationOnly",
-    "format": "eslint src --ext .ts",
+    "format": "eslint src --ext \".ts,.tsx\" --fix",
     "prebuild": "npm run format",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
