include sample tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
@@ -14,5 +15,10 @@
   ],
   "rules": {
     "@typescript-eslint/indent": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
