--- a/package.json
+++ b/package.json
@@ -4,34 +4,43 @@
   "description": "react component to navigate through pre-configured pages",
   "main": "lib/workflow.js",
   "dependencies": {
-    "react": "^16.8.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@testing-library/react": "^8.0.4",
+    "@types/jest": "^24.0.15",
     "@types/react": "^16.8.22",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.2",
     "husky": "^2.7.0",
+    "jest": "^24.8.0",
+    "jest-dom": "^3.5.0",
     "prettier": "1.18.2",
     "typescript": "^3.5.2"
   },
   "scripts": {
     "build": "npm run build:js && npm run build:types",
-    "build:js": "babel src -d lib -x \".ts,.tsx\" --ignore \"**/*.test.ts\"",
+    "build:js": "babel src -d lib -x \".ts,.tsx\" --ignore '**/*.test.ts,**/*.test.tsx'",
     "build:types": "tsc --emitDeclarationOnly",
     "format": "eslint src --ext \".ts,.tsx\" --fix",
     "prebuild": "npm run format",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm run build",
+    "test": "jest --coverage"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build"
+      "pre-commit": "npm run test"
     }
   },
   "repository": {
