--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "target": "esnext"
   },
   "exclude": [
-    "node_modules",
-    "**/*.test.*"
+    "node_modules"
   ],
   "include": [
     "src"
