--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -28,7 +29,10 @@
     "jest": "^24.8.0",
     "jest-dom": "^3.5.0",
     "prettier": "1.18.2",
-    "typescript": "^3.5.2"
+    "react-docgen-typescript": "^1.12.5",
+    "react-styleguidist": "^9.1.11",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.2"
   },
   "scripts": {
     "build": "npm run build:js && npm run build:types",
@@ -37,6 +41,7 @@
     "format": "eslint src --ext \".ts,.tsx\" --fix",
     "prebuild": "npm run format",
     "pretest": "npm run build",
+    "start:dev": "styleguidist server",
     "test": "jest --coverage"
   },
   "husky": {
